// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Maintenance component should render with default props 1`] = `
<EmptyState
  className="ins-c-empty-state__maintenance"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h4"
    size="lg"
  >
    Maintenance in progress
  </Title>
  <EmptyStateBody>
    <Stack>
      <StackItem>
        We are currently undergoing scheduled maintenance from 
        6am
        -
        8am
         
        EST
        .
      </StackItem>
      <StackItem>
        We will be back shortly, thank you for your patience.
      </StackItem>
    </Stack>
  </EmptyStateBody>
</EmptyState>
`;

exports[`Maintenance component should render with new description 1`] = `
<EmptyState
  className="ins-c-empty-state__maintenance"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h4"
    size="lg"
  >
    Maintenance in progress
  </Title>
  <EmptyStateBody>
    <span>
       test 
    </span>
  </EmptyStateBody>
</EmptyState>
`;

exports[`Maintenance component should render with times 1`] = `
<EmptyState
  className="ins-c-empty-state__maintenance"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h4"
    size="lg"
  >
    Maintenance in progress
  </Title>
  <EmptyStateBody>
    <Stack>
      <StackItem>
        We are currently undergoing scheduled maintenance from 
        12am
        -
        2am
         
        EST
        .
      </StackItem>
      <StackItem>
        We will be back shortly, thank you for your patience.
      </StackItem>
    </Stack>
  </EmptyStateBody>
</EmptyState>
`;
